src/conditionParser.cpp

// Generated from conditionParser.g4 by ANTLR 4.9.3


#include "conditionParserListener.h"
#include "conditionParserVisitor.h"

#include "conditionParser.h"


using namespace antlrcpp;
using namespace antlr4;

conditionParser::conditionParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

conditionParser::~conditionParser() {
  delete _interpreter;
}

std::string conditionParser::getGrammarFileName() const {
  return "conditionParser.g4";
}

const std::vector<std::string>& conditionParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& conditionParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- SpecContext ------------------------------------------------------------------

conditionParser::SpecContext::SpecContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

conditionParser::BpreContext* conditionParser::SpecContext::bpre() {
  return getRuleContext<conditionParser::BpreContext>(0);
}

conditionParser::BposContext* conditionParser::SpecContext::bpos() {
  return getRuleContext<conditionParser::BposContext>(0);
}


size_t conditionParser::SpecContext::getRuleIndex() const {
  return conditionParser::RuleSpec;
}

void conditionParser::SpecContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<conditionParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSpec(this);
}

void conditionParser::SpecContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<conditionParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSpec(this);
}


antlrcpp::Any conditionParser::SpecContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<conditionParserVisitor*>(visitor))
    return parserVisitor->visitSpec(this);
  else
    return visitor->visitChildren(this);
}

conditionParser::SpecContext* conditionParser::spec() {
  SpecContext *_localctx = _tracker.createInstance<SpecContext>(_ctx, getState());
  enterRule(_localctx, 0, conditionParser::RuleSpec);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(52);
    bpre();
    setState(53);
    bpos();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BpreContext ------------------------------------------------------------------

conditionParser::BpreContext::BpreContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* conditionParser::BpreContext::LBRAC() {
  return getToken(conditionParser::LBRAC, 0);
}

conditionParser::Abexp_atomContext* conditionParser::BpreContext::abexp_atom() {
  return getRuleContext<conditionParser::Abexp_atomContext>(0);
}

tree::TerminalNode* conditionParser::BpreContext::VBAR() {
  return getToken(conditionParser::VBAR, 0);
}

conditionParser::Rbexp_atomContext* conditionParser::BpreContext::rbexp_atom() {
  return getRuleContext<conditionParser::Rbexp_atomContext>(0);
}

tree::TerminalNode* conditionParser::BpreContext::RBRAC() {
  return getToken(conditionParser::RBRAC, 0);
}


size_t conditionParser::BpreContext::getRuleIndex() const {
  return conditionParser::RuleBpre;
}

void conditionParser::BpreContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<conditionParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBpre(this);
}

void conditionParser::BpreContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<conditionParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBpre(this);
}


antlrcpp::Any conditionParser::BpreContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<conditionParserVisitor*>(visitor))
    return parserVisitor->visitBpre(this);
  else
    return visitor->visitChildren(this);
}

conditionParser::BpreContext* conditionParser::bpre() {
  BpreContext *_localctx = _tracker.createInstance<BpreContext>(_ctx, getState());
  enterRule(_localctx, 2, conditionParser::RuleBpre);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(55);
    match(conditionParser::LBRAC);
    setState(56);
    abexp_atom();
    setState(57);
    match(conditionParser::VBAR);
    setState(58);
    rbexp_atom();
    setState(59);
    match(conditionParser::RBRAC);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BposContext ------------------------------------------------------------------

conditionParser::BposContext::BposContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* conditionParser::BposContext::LBRAC() {
  return getToken(conditionParser::LBRAC, 0);
}

conditionParser::Abexp_prove_withContext* conditionParser::BposContext::abexp_prove_with() {
  return getRuleContext<conditionParser::Abexp_prove_withContext>(0);
}

tree::TerminalNode* conditionParser::BposContext::VBAR() {
  return getToken(conditionParser::VBAR, 0);
}

conditionParser::Rbexp_prove_withContext* conditionParser::BposContext::rbexp_prove_with() {
  return getRuleContext<conditionParser::Rbexp_prove_withContext>(0);
}

tree::TerminalNode* conditionParser::BposContext::RBRAC() {
  return getToken(conditionParser::RBRAC, 0);
}


size_t conditionParser::BposContext::getRuleIndex() const {
  return conditionParser::RuleBpos;
}

void conditionParser::BposContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<conditionParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBpos(this);
}

void conditionParser::BposContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<conditionParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBpos(this);
}


antlrcpp::Any conditionParser::BposContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<conditionParserVisitor*>(visitor))
    return parserVisitor->visitBpos(this);
  else
    return visitor->visitChildren(this);
}

conditionParser::BposContext* conditionParser::bpos() {
  BposContext *_localctx = _tracker.createInstance<BposContext>(_ctx, getState());
  enterRule(_localctx, 4, conditionParser::RuleBpos);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(61);
    match(conditionParser::LBRAC);
    setState(62);
    abexp_prove_with();
    setState(63);
    match(conditionParser::VBAR);
    setState(64);
    rbexp_prove_with();
    setState(65);
    match(conditionParser::RBRAC);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Abexp_atomContext ------------------------------------------------------------------

conditionParser::Abexp_atomContext::Abexp_atomContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t conditionParser::Abexp_atomContext::getRuleIndex() const {
  return conditionParser::RuleAbexp_atom;
}

void conditionParser::Abexp_atomContext::copyFrom(Abexp_atomContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- A_eqmodContext ------------------------------------------------------------------

tree::TerminalNode* conditionParser::A_eqmodContext::EQMOD() {
  return getToken(conditionParser::EQMOD, 0);
}

std::vector<conditionParser::AexpContext *> conditionParser::A_eqmodContext::aexp() {
  return getRuleContexts<conditionParser::AexpContext>();
}

conditionParser::AexpContext* conditionParser::A_eqmodContext::aexp(size_t i) {
  return getRuleContext<conditionParser::AexpContext>(i);
}

conditionParser::A_eqmodContext::A_eqmodContext(Abexp_atomContext *ctx) { copyFrom(ctx); }

void conditionParser::A_eqmodContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<conditionParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterA_eqmod(this);
}
void conditionParser::A_eqmodContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<conditionParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitA_eqmod(this);
}

antlrcpp::Any conditionParser::A_eqmodContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<conditionParserVisitor*>(visitor))
    return parserVisitor->visitA_eqmod(this);
  else
    return visitor->visitChildren(this);
}
//----------------- A_eqContext ------------------------------------------------------------------

tree::TerminalNode* conditionParser::A_eqContext::EQ() {
  return getToken(conditionParser::EQ, 0);
}

std::vector<conditionParser::AexpContext *> conditionParser::A_eqContext::aexp() {
  return getRuleContexts<conditionParser::AexpContext>();
}

conditionParser::AexpContext* conditionParser::A_eqContext::aexp(size_t i) {
  return getRuleContext<conditionParser::AexpContext>(i);
}

conditionParser::A_eqContext::A_eqContext(Abexp_atomContext *ctx) { copyFrom(ctx); }

void conditionParser::A_eqContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<conditionParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterA_eq(this);
}
void conditionParser::A_eqContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<conditionParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitA_eq(this);
}

antlrcpp::Any conditionParser::A_eqContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<conditionParserVisitor*>(visitor))
    return parserVisitor->visitA_eq(this);
  else
    return visitor->visitChildren(this);
}
//----------------- A_parensContext ------------------------------------------------------------------

tree::TerminalNode* conditionParser::A_parensContext::LPAR() {
  return getToken(conditionParser::LPAR, 0);
}

conditionParser::Abexp_atomContext* conditionParser::A_parensContext::abexp_atom() {
  return getRuleContext<conditionParser::Abexp_atomContext>(0);
}

tree::TerminalNode* conditionParser::A_parensContext::RPAR() {
  return getToken(conditionParser::RPAR, 0);
}

conditionParser::A_parensContext::A_parensContext(Abexp_atomContext *ctx) { copyFrom(ctx); }

void conditionParser::A_parensContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<conditionParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterA_parens(this);
}
void conditionParser::A_parensContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<conditionParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitA_parens(this);
}

antlrcpp::Any conditionParser::A_parensContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<conditionParserVisitor*>(visitor))
    return parserVisitor->visitA_parens(this);
  else
    return visitor->visitChildren(this);
}
//----------------- A_andContext ------------------------------------------------------------------

tree::TerminalNode* conditionParser::A_andContext::AND() {
  return getToken(conditionParser::AND, 0);
}

tree::TerminalNode* conditionParser::A_andContext::LSQUARE() {
  return getToken(conditionParser::LSQUARE, 0);
}

conditionParser::AbexpsContext* conditionParser::A_andContext::abexps() {
  return getRuleContext<conditionParser::AbexpsContext>(0);
}

tree::TerminalNode* conditionParser::A_andContext::RSQUARE() {
  return getToken(conditionParser::RSQUARE, 0);
}

conditionParser::A_andContext::A_andContext(Abexp_atomContext *ctx) { copyFrom(ctx); }

void conditionParser::A_andContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<conditionParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterA_and(this);
}
void conditionParser::A_andContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<conditionParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitA_and(this);
}

antlrcpp::Any conditionParser::A_andContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<conditionParserVisitor*>(visitor))
    return parserVisitor->visitA_and(this);
  else
    return visitor->visitChildren(this);
}
//----------------- A_trueContext ------------------------------------------------------------------

tree::TerminalNode* conditionParser::A_trueContext::TRUE() {
  return getToken(conditionParser::TRUE, 0);
}

conditionParser::A_trueContext::A_trueContext(Abexp_atomContext *ctx) { copyFrom(ctx); }

void conditionParser::A_trueContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<conditionParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterA_true(this);
}
void conditionParser::A_trueContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<conditionParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitA_true(this);
}

antlrcpp::Any conditionParser::A_trueContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<conditionParserVisitor*>(visitor))
    return parserVisitor->visitA_true(this);
  else
    return visitor->visitChildren(this);
}
//----------------- A_eqopContext ------------------------------------------------------------------

std::vector<conditionParser::AexpContext *> conditionParser::A_eqopContext::aexp() {
  return getRuleContexts<conditionParser::AexpContext>();
}

conditionParser::AexpContext* conditionParser::A_eqopContext::aexp(size_t i) {
  return getRuleContext<conditionParser::AexpContext>(i);
}

tree::TerminalNode* conditionParser::A_eqopContext::EQOP() {
  return getToken(conditionParser::EQOP, 0);
}

conditionParser::A_eqopContext::A_eqopContext(Abexp_atomContext *ctx) { copyFrom(ctx); }

void conditionParser::A_eqopContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<conditionParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterA_eqop(this);
}
void conditionParser::A_eqopContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<conditionParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitA_eqop(this);
}

antlrcpp::Any conditionParser::A_eqopContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<conditionParserVisitor*>(visitor))
    return parserVisitor->visitA_eqop(this);
  else
    return visitor->visitChildren(this);
}
conditionParser::Abexp_atomContext* conditionParser::abexp_atom() {
  Abexp_atomContext *_localctx = _tracker.createInstance<Abexp_atomContext>(_ctx, getState());
  enterRule(_localctx, 6, conditionParser::RuleAbexp_atom);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(90);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<conditionParser::A_trueContext>(_localctx);
      enterOuterAlt(_localctx, 1);
      setState(67);
      match(conditionParser::TRUE);
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<conditionParser::A_parensContext>(_localctx);
      enterOuterAlt(_localctx, 2);
      setState(68);
      match(conditionParser::LPAR);
      setState(69);
      abexp_atom();
      setState(70);
      match(conditionParser::RPAR);
      break;
    }

    case 3: {
      _localctx = _tracker.createInstance<conditionParser::A_eqContext>(_localctx);
      enterOuterAlt(_localctx, 3);
      setState(72);
      match(conditionParser::EQ);
      setState(73);
      aexp(0);
      setState(74);
      aexp(0);
      break;
    }

    case 4: {
      _localctx = _tracker.createInstance<conditionParser::A_eqmodContext>(_localctx);
      enterOuterAlt(_localctx, 4);
      setState(76);
      match(conditionParser::EQMOD);
      setState(77);
      aexp(0);
      setState(78);
      aexp(0);
      setState(79);
      aexp(0);
      break;
    }

    case 5: {
      _localctx = _tracker.createInstance<conditionParser::A_andContext>(_localctx);
      enterOuterAlt(_localctx, 5);
      setState(81);
      match(conditionParser::AND);
      setState(82);
      match(conditionParser::LSQUARE);
      setState(83);
      abexps();
      setState(84);
      match(conditionParser::RSQUARE);
      break;
    }

    case 6: {
      _localctx = _tracker.createInstance<conditionParser::A_eqopContext>(_localctx);
      enterOuterAlt(_localctx, 6);
      setState(86);
      aexp(0);
      setState(87);
      match(conditionParser::EQOP);
      setState(88);
      aexp(0);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AexpContext ------------------------------------------------------------------

conditionParser::AexpContext::AexpContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t conditionParser::AexpContext::getRuleIndex() const {
  return conditionParser::RuleAexp;
}

void conditionParser::AexpContext::copyFrom(AexpContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- Adds_aexpContext ------------------------------------------------------------------

tree::TerminalNode* conditionParser::Adds_aexpContext::INST_ADD() {
  return getToken(conditionParser::INST_ADD, 0);
}

tree::TerminalNode* conditionParser::Adds_aexpContext::LSQUARE() {
  return getToken(conditionParser::LSQUARE, 0);
}

conditionParser::AexpsContext* conditionParser::Adds_aexpContext::aexps() {
  return getRuleContext<conditionParser::AexpsContext>(0);
}

tree::TerminalNode* conditionParser::Adds_aexpContext::RSQUARE() {
  return getToken(conditionParser::RSQUARE, 0);
}

conditionParser::Adds_aexpContext::Adds_aexpContext(AexpContext *ctx) { copyFrom(ctx); }

void conditionParser::Adds_aexpContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<conditionParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAdds_aexp(this);
}
void conditionParser::Adds_aexpContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<conditionParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAdds_aexp(this);
}

antlrcpp::Any conditionParser::Adds_aexpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<conditionParserVisitor*>(visitor))
    return parserVisitor->visitAdds_aexp(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Aexp_powContext ------------------------------------------------------------------

conditionParser::AexpContext* conditionParser::Aexp_powContext::aexp() {
  return getRuleContext<conditionParser::AexpContext>(0);
}

tree::TerminalNode* conditionParser::Aexp_powContext::POWOP() {
  return getToken(conditionParser::POWOP, 0);
}

conditionParser::NumContext* conditionParser::Aexp_powContext::num() {
  return getRuleContext<conditionParser::NumContext>(0);
}

conditionParser::Aexp_powContext::Aexp_powContext(AexpContext *ctx) { copyFrom(ctx); }

void conditionParser::Aexp_powContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<conditionParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAexp_pow(this);
}
void conditionParser::Aexp_powContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<conditionParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAexp_pow(this);
}

antlrcpp::Any conditionParser::Aexp_powContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<conditionParserVisitor*>(visitor))
    return parserVisitor->visitAexp_pow(this);
  else
    return visitor->visitChildren(this);
}
//----------------- A_inst_sqContext ------------------------------------------------------------------

tree::TerminalNode* conditionParser::A_inst_sqContext::INST_SQ() {
  return getToken(conditionParser::INST_SQ, 0);
}

conditionParser::AexpContext* conditionParser::A_inst_sqContext::aexp() {
  return getRuleContext<conditionParser::AexpContext>(0);
}

conditionParser::A_inst_sqContext::A_inst_sqContext(AexpContext *ctx) { copyFrom(ctx); }

void conditionParser::A_inst_sqContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<conditionParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterA_inst_sq(this);
}
void conditionParser::A_inst_sqContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<conditionParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitA_inst_sq(this);
}

antlrcpp::Any conditionParser::A_inst_sqContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<conditionParserVisitor*>(visitor))
    return parserVisitor->visitA_inst_sq(this);
  else
    return visitor->visitChildren(this);
}
//----------------- A_scContext ------------------------------------------------------------------

conditionParser::Simple_constContext* conditionParser::A_scContext::simple_const() {
  return getRuleContext<conditionParser::Simple_constContext>(0);
}

conditionParser::A_scContext::A_scContext(AexpContext *ctx) { copyFrom(ctx); }

void conditionParser::A_scContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<conditionParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterA_sc(this);
}
void conditionParser::A_scContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<conditionParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitA_sc(this);
}

antlrcpp::Any conditionParser::A_scContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<conditionParserVisitor*>(visitor))
    return parserVisitor->visitA_sc(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Aexp_oprationsContext ------------------------------------------------------------------

std::vector<conditionParser::AexpContext *> conditionParser::Aexp_oprationsContext::aexp() {
  return getRuleContexts<conditionParser::AexpContext>();
}

conditionParser::AexpContext* conditionParser::Aexp_oprationsContext::aexp(size_t i) {
  return getRuleContext<conditionParser::AexpContext>(i);
}

tree::TerminalNode* conditionParser::Aexp_oprationsContext::MULOP() {
  return getToken(conditionParser::MULOP, 0);
}

tree::TerminalNode* conditionParser::Aexp_oprationsContext::ADDOP() {
  return getToken(conditionParser::ADDOP, 0);
}

tree::TerminalNode* conditionParser::Aexp_oprationsContext::SUBOP() {
  return getToken(conditionParser::SUBOP, 0);
}

conditionParser::Aexp_oprationsContext::Aexp_oprationsContext(AexpContext *ctx) { copyFrom(ctx); }

void conditionParser::Aexp_oprationsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<conditionParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAexp_oprations(this);
}
void conditionParser::Aexp_oprationsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<conditionParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAexp_oprations(this);
}

antlrcpp::Any conditionParser::Aexp_oprationsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<conditionParserVisitor*>(visitor))
    return parserVisitor->visitAexp_oprations(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Aexp_limbsContext ------------------------------------------------------------------

tree::TerminalNode* conditionParser::Aexp_limbsContext::ULIMBS() {
  return getToken(conditionParser::ULIMBS, 0);
}

conditionParser::NumContext* conditionParser::Aexp_limbsContext::num() {
  return getRuleContext<conditionParser::NumContext>(0);
}

tree::TerminalNode* conditionParser::Aexp_limbsContext::LSQUARE() {
  return getToken(conditionParser::LSQUARE, 0);
}

conditionParser::AexpsContext* conditionParser::Aexp_limbsContext::aexps() {
  return getRuleContext<conditionParser::AexpsContext>(0);
}

tree::TerminalNode* conditionParser::Aexp_limbsContext::RSQUARE() {
  return getToken(conditionParser::RSQUARE, 0);
}

conditionParser::Aexp_limbsContext::Aexp_limbsContext(AexpContext *ctx) { copyFrom(ctx); }

void conditionParser::Aexp_limbsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<conditionParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAexp_limbs(this);
}
void conditionParser::Aexp_limbsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<conditionParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAexp_limbs(this);
}

antlrcpp::Any conditionParser::Aexp_limbsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<conditionParserVisitor*>(visitor))
    return parserVisitor->visitAexp_limbs(this);
  else
    return visitor->visitChildren(this);
}
//----------------- A_instContext ------------------------------------------------------------------

std::vector<conditionParser::AexpContext *> conditionParser::A_instContext::aexp() {
  return getRuleContexts<conditionParser::AexpContext>();
}

conditionParser::AexpContext* conditionParser::A_instContext::aexp(size_t i) {
  return getRuleContext<conditionParser::AexpContext>(i);
}

tree::TerminalNode* conditionParser::A_instContext::INST_ADD() {
  return getToken(conditionParser::INST_ADD, 0);
}

tree::TerminalNode* conditionParser::A_instContext::INST_SUB() {
  return getToken(conditionParser::INST_SUB, 0);
}

tree::TerminalNode* conditionParser::A_instContext::INST_MUL() {
  return getToken(conditionParser::INST_MUL, 0);
}

conditionParser::A_instContext::A_instContext(AexpContext *ctx) { copyFrom(ctx); }

void conditionParser::A_instContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<conditionParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterA_inst(this);
}
void conditionParser::A_instContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<conditionParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitA_inst(this);
}

antlrcpp::Any conditionParser::A_instContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<conditionParserVisitor*>(visitor))
    return parserVisitor->visitA_inst(this);
  else
    return visitor->visitChildren(this);
}
//----------------- A_varContext ------------------------------------------------------------------

conditionParser::VarContext* conditionParser::A_varContext::var() {
  return getRuleContext<conditionParser::VarContext>(0);
}

conditionParser::A_varContext::A_varContext(AexpContext *ctx) { copyFrom(ctx); }

void conditionParser::A_varContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<conditionParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterA_var(this);
}
void conditionParser::A_varContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<conditionParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitA_var(this);
}
